# ChatHub

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
docs/: qml设计说明.md  src设计说明.md  用户端使用说明.md  联调与演示指南.md  通信协议.md
qml/components/: AppButton.qml  AppLogo.qml  Field.qml  ReadonlyLogText.qml  SectionTitle.qml  StyledCheckBox.qml  StyledComboBox.qml  StyledTabButton.qml  ThemeSwitch.qml
qml/panels/: ChannelsPanel.qml  ChatPanel.qml  TopBar.qml  WorkspacePanel.qml
resources/: app_icon.rc  resources.qrc
src/controller/: ChatController.cpp  ChatController.h
src/network/: NetworkClient.cpp  NetworkClient.h
src/protocol/: ProtocolAdapter.cpp  ProtocolAdapter.h
tests/: controller_tests.cpp  final_server_integration.py  mock_server.py  network_client_tests.cpp  protocol_tests.cpp
